--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "18.2.58",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.17",
+    "classnames": "^2.3.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
     "postcss": "8.4.35",
+    "prisma": "^5.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.11",
