Configured Google Provider

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mysql://root:mySQL@007@localhost:3306/issue-tracker"
 NEXTAUTH_URL = 'http://localhost:3000'
 NEXTAUTH_SECRET= 'asdAKsdASDkkasdkwaa/=wsnASDASd'
+GOOGLE_CLIENT_ID="1061387451104-geguks626jqkv74hlgamq0jvia1q4is3.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
